2.3/svc23-1.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc23-1
  namespace: netology
spec:
  type: NodePort
  selector:
    app: deploy23-1
  ports:
    - name: nginx
      protocol: TCP
      port: 9001
      targetPort: 8080
      nodePort: 30001
    - name: multitool-http
      protocol: TCP
      port: 9002
      targetPort: 80
      nodePort: 30002
...
