2.3/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: netology.site.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc23-2
            port:
              number: 9001
  tls:
    - hosts:
      - netology.site.local
      secretName: nginx-tls
...
